--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
         <body style="width:100%;height:100%;">
-            <div id="healthp1">100</div><div id="healthp2">100</div>
             <h1 id="headder">JD's Rpg Battle Helper</h1><br>
                     <button onclick="play()">play</button>
                  <!-- DIE BUTTON <button onclick="alert(randInt(1,NUMBER_OF_SIDES))">NUMBER_OF_SIDES</button> -->
@@ -43,19 +42,22 @@
                     <button onclick="inputvalue()">Done!</button>
                     </div>
                 </div>
+            <div id="healthp1">100</div>
+            
+            <div id="healthp2">100</div>
                 <p>
                     <h1>Classes:</h1><br>
                     <h2>
-                    <p class="classPlayer" id="warrior">Warrior - <button class="attackP1">Slash(melee)</button>, <button class="attackP1">Heavy Attack(Heavy Attack, Chance:12)</button>, <button class="attackP1">Blood Rage((Special) Chance:15)</button>, <button class="attackP1">Heal</button><br><br></p>
-                    <p class="classPlayer" id="archer">Archer - Arrow(ranged), 2 Arrows(Heavy Attack, Chance:12), Heal<br><br></p>
-                    <p class="classPlayer" id="thief">Thief - Stab(melee), Dule Blades(Heavy Attack, Chance:12), Heal<br><br></p>
-                    <p class="classPlayer" id="bishop">Bishop - Holy Water(magic), Holy Beam (Heavy Attack, Chance:13), Curse(Special, Chance:16), Heal<br><br></p>
-                    <p class="classPlayer" id="wizard">Wizard - Shocking Staff(melee), Shock(magic), Thunder(magic x2 Chance:12), Heal<br><br></p>
-                    <p class="classPlayer" id="mage">Mage - Fire Fist(melee), Fireball(magic), Flamethrower(magic x2 Chance:12), Heal<br><br></p>
-                    <p class="classPlayer" id="assassin">Assassin - Stab(melee), Back Stab(melee x2 Chance:12), Throwing Knife(ranged), Heal<br><br></p>
-                    <p class="classPlayer" id="rouge">Rouge - Stab(melee), Rage(meleex2 Chance:10), Heal<br><br></p>
-                    <p class="classPlayer" id="gunslinger">Gunslinger - Shoot(ranged), Rapid Fire(ranged x2 Chance:12), Heal<br><br></p>
-                    <p class="classPlayer" id="witch">Witch - Splash of Damage(postion), Scratch(melee), Voodo(magic), Heal<br><br></p><br>
+                    <p> Warrior - Slash(Melee), Strong Attack(Heavy Attack, Chance:12), Blood Rage(Special, Chance:15), Heal<br><br></p>
+                    <p> Archer - Arrow(Ranged), Piercing Arrow(Heavy Attack, Chance:12), Explotion Arrow(Special, Chance:10) Heal<br><br></p>
+                    <p> Thief - Stab(Melee), Dule Blades(Heavy Attack, Chance:12), Golden Dagger(Special, Chance:16), Heal<br><br></p>
+                    <p> Bishop - Holy Water(Magic), Holy Beam (Heavy Attack, Chance:13), Curse(Special, Chance:16), Heal<br><br></p>
+                    <p> Wizard - Shocking Staff(Magic), Thunder(Heavy Attack, Chance:12), Thunder Storm(Special, Chance:14) Heal<br><br></p>
+                    <p> Mage - Fireball(Magic), Flamethrower(Heavy Attack, Chance:12), Lava Bending(Special, Chance:17) Heal<br><br></p>
+                    <p> Assassin - Stab(Melee), Back Stab(Heavy Attack, Chance:12), Throwing Knife(Special, Chance:15), Heal<br><br></p>
+                    <p> Rouge - Stab(Melee), Rage Slash(Heavy Attack, Chance:10), Bomb(Special, Chance:16), Heal<br><br></p>
+                    <p> Gunslinger - Shoot(Ranged), Rapid Fire(Heavy Attack, Chance:12), Hawk Eye(Special, Chance:14) Heal<br><br></p>
+                    <p> Witch - Voodo(Magic), Splash of Damage(Heavy Attack, Postion) Curse(Special, Chance:15), Heal<br><br></p><br>
                     </h2>
                     
                     <h1>Attack:</h1><br>
@@ -63,15 +65,14 @@
                     Damage = 10<br><br>
                     Special = 20<br><br>
                     Heavy attack damage = 15<br><br>
-                    Melee Attacks - Chance:4, Critical Chance:8<br><br>
-                    Ranged Attacks - Chance:4, Critical Chance:7<br><br>
-                    Magic Attacks - Chance:4, Critical Chance:8<br><br>
+                    Melee Attacks - Chance:4, Critical Chance:8, can be blocked and doged but not deflected<br><br>
+                    Ranged Attacks - Chance:4, Critical Chance:7, can be blocked and deflected but not doged<br><br>
+                    Magic Attacks - Chance:4, Critical Chance:8, can be doged and deflected but not blockedb<br><br>
                     Heal - 25, Chance:5, Bonus helth:9<br><br>
-                    Postion(witch) - Damage:5 for 2 rounds, Chance:7<br><br>
+                    Postion(witch) - Damage:5 for 2 rounds, cannot be doged, blocked, or deflected<br><br>
                     Block - Chance:3<br><br>
                     Doge - Chance:7<br><br>
                     Deflect - Chance:8<br><br>
-                    Stun - Chance:8<br><br><br>
                     </h2>
                     <h1>Gameplay:</h1><br>
                     <h2>
@@ -81,7 +82,6 @@
                     Doges and blocks can only be used by the player being attacked when attacker rolls their attack -<br>
                     You cannot block magic attacks, but doge can -<br>
                     If player uses Deflect sucsessfuly next player needs to roll a damage dice which reflects onto themselves -<br>
-                    If Stun is used sucsessfuly then the player that used stun goes 2 more times -<br><br>
                     </h2>
                 </p>
     V.0.2.5B &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;JDtheman19&#169;
