--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     <h1>Classes:</h1><br>
                     <h2>
                     <p> Warrior - Slash(Melee), Strong Attack(Heavy Attack, Chance:12), Blood Rage(Special, Chance:15), Heal<br><br></p>
-                    <p> Archer - Arrow(Ranged), Piercing Arrow(Heavy Attack, Chance:12), Explotion Arrow(Special, Chance:10) Heal<br><br></p>
+                    <p> Archer - Arrow(Ranged), Piercing Arrow(Heavy Attack, Chance:12), Explotion Arrow(Special, Chance:10), Heal<br><br></p>
                     <p> Thief - Stab(Melee), Dule Blades(Heavy Attack, Chance:12), Golden Dagger(Special, Chance:16), Heal<br><br></p>
                     <p> Bishop - Holy Water(Magic), Holy Beam (Heavy Attack, Chance:13), Curse(Special, Chance:16), Heal<br><br></p>
-                    <p> Wizard - Shocking Staff(Magic), Thunder(Heavy Attack, Chance:12), Thunder Storm(Special, Chance:14) Heal<br><br></p>
-                    <p> Mage - Fireball(Magic), Flamethrower(Heavy Attack, Chance:12), Lava Bending(Special, Chance:17) Heal<br><br></p>
+                    <p> Wizard - Shocking Staff(Magic), Thunder(Heavy Attack, Chance:12), Thunder Storm(Special, Chance:14), Heal<br><br></p>
+                    <p> Mage - Fireball(Magic), Flamethrower(Heavy Attack, Chance:12), Lava Bending(Special, Chance:17), Heal<br><br></p>
                     <p> Assassin - Stab(Melee), Back Stab(Heavy Attack, Chance:12), Throwing Knife(Special, Chance:15), Heal<br><br></p>
                     <p> Rouge - Stab(Melee), Rage Slash(Heavy Attack, Chance:10), Bomb(Special, Chance:16), Heal<br><br></p>
-                    <p> Gunslinger - Shoot(Ranged), Rapid Fire(Heavy Attack, Chance:12), Hawk Eye(Special, Chance:14) Heal<br><br></p>
+                    <p> Gunslinger - Shoot(Ranged), Rapid Fire(Heavy Attack, Chance:12), Hawk Eye(Special, Chance:14), Heal<br><br></p>
                     <p> Witch - Voodo(Magic), Splash of Damage(Heavy Attack, Postion) Curse(Special, Chance:15), Heal<br><br></p><br>
                     </h2>
                     
