--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
         <body style="width:100%;height:100%;">
-            <h1 id="headder">JD's Rpg Battle Helper</h1><br>
+            <h1 id="headder">JD's Rpg Battle</h1><br>
                     <button onclick="play()">play</button>
                  <!-- DIE BUTTON <button onclick="alert(randInt(1,NUMBER_OF_SIDES))">NUMBER_OF_SIDES</button> -->
                 <!--<h1>Roll Dice: </h1><br><button id="stelth" onclick="rollDie(20)">Stelth</button><button id="chance" onclick="rollDie(15)">Chance</button><button id="C_Chance" onclick="rollDie(15)">Critical Chance</button><br><br><button id="Me_Attack" onclick="rollDie(35)">Melee Attack</button><button id="R_Attack" onclick="rollDie(30)">Ranged Attack</button><button id="M_Attack" onclick="rollDie(25)">Magic Attack</button><br><br><button id="Postion" onclick="rollDie(10)">Postion(witch)</button>--><br><br><br>
-                <div id="Dice">0</div>
                 <div id="players">
                     <div id="closePlayers" onclick="closePlayers()">X</div>
                     <br><br><br>
